--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
   "author": "mani",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "git": "^0.1.5",
+    "md5": "^2.3.0",
     "mongoose": "^8.2.0",
-    "mongoose-encryption": "^2.1.2"
+    "mongoose-encryption": "^2.1.2",
+    "mongoose-findorcreate": "^4.0.0",
+    "nodemon": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
+    "passport-twitter": "^1.0.4"
   }
 }
